# DocGuard

./: .docguard.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: feature-implementer.md  feature-planner.md  pipeline-orchestrator.md  pipeline-security-auditor.md  pr-reviewer.md  test-author.md
.claude/commands/: pipeline.md  work-issue.md
.cursor/plans/: docguard_core_architecture_9f0cf874.plan.md
.github/: pipeline.env  pull_request_template.md
.github/workflows/: ai-fix.yml  ai-review.yml  auto-merge.yml  ci.yml  feature-dispatch.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-diagnostics-threshold/: 01-01-PLAN.md  01-02-PLAN.md  01-REVIEWS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ai-pipeline.md  architecture.md  auto-fix.md  cli-reference.md  configuration.md  drift-report-schema.md  getting-started.md  index.md
docs/extending/: writing-a-parser.md
docs/integrations/: github-actions.md  pre-commit.md
scripts/pipeline/: board.sh  bootstrap_github.sh  e2e.sh  seed_features.txt  work-issue.sh
src/docguard/: __init__.py  cli.py  config.py
src/docguard/core/: comparator.py  models.py  spec_loader.py
src/docguard/fixers/: llm_fixer.py
src/docguard/formatters/: github.py  json_fmt.py  text.py
src/docguard/parsers/: base.py  fastapi_parser.py  flask_parser.py  registry.py
tests/: conftest.py  test_cli.py  test_comparator.py  test_fastapi_parser.py  test_flask_parser.py  test_registry.py
tests/e2e/: __init__.py  conftest.py  corpus.py  harness.py  test_harness.py  test_real_repos.py
tests/fixtures/: drifted_openapi.yaml  sample_fastapi_app.py  sample_flask_app.py  sample_openapi.yaml
